--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,18 @@
   margin: 0;
   padding: 0;
 }
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+body{
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+}
+
+
+
+h1,h2,h3{
+  font-weight: 500;
+}
